5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1745_1529.log
== TEST (2019-05-15 14:15:27) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(t>=50000):
		print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:46) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(t>=50000):
		print(t)
print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:09) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(t>=50000):
		print(t)
print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:24) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(t>=50000):
		print(t)
print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:00) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
while(gi+gc<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(gi+gc>=50000):
		print(gi+gc)
print(gi+gc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:22) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
while(gi+gc<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(gi+gc>=50000):
		print(gi+gc)
print(gi+gc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:24) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:28) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:29) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:30) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:30) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:30) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:30) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:31) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:48) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:53) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:02) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	else(d>=50000):
		print(d)
print(d)


-- ERROR:
File "XXXX", line 13
    else(d>=50000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:20) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=int(input("Percentual na infantaria: "))
pc=int(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:36) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:36:23) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:38) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:06) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:27) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:57) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:23) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:36) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:24) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(d>=50000):
		print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:44) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(d>=50000):
	print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:58) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(d>=50000):
	print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi=int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:57) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(d>=50000):
	
print(t)


-- ERROR:
File "XXXX", line 15
    print(t)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:04) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
d=gi+gc
while(d<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(d>=50000):
	print(d)
print(t)


-- ERROR:
File "XXXX", line 15
    print(t)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:04) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while():
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(d>=50000):
	print(d)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(d>=50000):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:35) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(c>=50000):
	print(c)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(d>=50000):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:49) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
if(c>=50000):
	print(c)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(d>=50000):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:17) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
		print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(d>=50000):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:34) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:38) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:49) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
	print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:53) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
	print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:34) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:41) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:56) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
		print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:53) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
		print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:07) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
		print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:33) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	print(t)
	if(c>=50000):
		print(t)


-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:27) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
		print(t)


-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:59) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
		print(t)


-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:07) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:42:11) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=50000
while(c<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(c>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:04) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(t>=50000):
print(t)


-- ERROR:
File "XXXX", line 14
    print(t)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:22) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	if(t>=50000):
		print(t)


-- OUTPUT:
50000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:45:01) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
	print(t)


-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:00) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
print(t)


-- OUTPUT:
50000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:17) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
print(t)


-- OUTPUT:
50000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:05) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
print(t/30)


-- OUTPUT:
1666.6666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:19) 
-- CODE:
gi=int(input("Qtd. guerreiros na infantaria: "))
gc=int(input("Qtd. guerreiros na cavalaria: "))
pi=float(input("Percentual na infantaria: "))
pc=float(input("Percentual na cavalaria: "))
t=0
c=0
while(t<50000):
	g=(gi*pi)/100
	gi=gi+g
	k=(gc*pc)/100
	gc=gc+k
	t=t+1
print(t/30)


-- OUTPUT:
1666.6666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
